--- a/my-orders.html
+++ b/my-orders.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="assets/fonts/font-awesome/css/font-awesome.min.css">
     
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
         
         <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-      </header>
+    </header>
 
     <div class="main-menu" id="main-menu">
         <div class="back-overlay"></div>
@@ -95,7 +95,7 @@
                 </div>
              </div>
          </div>
-     </div>
+    </div>
 
     <!---  HEADER  END  -->
 
@@ -266,6 +266,179 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+
+                        <div class="table-wrapper">
+                            <table class="data-table">
+                                <thead>
+                                    <tr>
+                                        <th>RESTAURANT</th>
+                                        <th>ORDER ID</th>
+                                        <th>DATE</th>
+                                        <th>TOTAL PRICE</th>
+                                        <th>STATUS</th>
+                                        <th width="100">INVOICE</th>
+                                        <th width="150"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>
+                                            <span class="table-heading">RESTAURANT</span>
+                                            AMWAJ
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">ORDER ID</span>
+                                            OAOPZZTJM
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">DATE</span>
+                                            13-APR-2020
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">TOTAL PRICE</span>
+                                            BD270.00
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">STATUS</span>
+                                            Progress
+                                        </td>
+                                        <td class="text-center">
+                                            <a href="Javascript:void(0)" class="download-pdf icon-btn">
+                                                <i class="fa fa-file-pdf-o"></i>
+                                            </a>
+                                        </td>
+                                        <td class="text-center">
+                                            <a href="Javascript:void(0)" class="download-pdf icon-btn d-lg-none">
+                                                <i class="fa fa-file-pdf-o"></i>
+                                            </a>
+                                            <a href="Javascript:void(0)" class="info-pdf icon-btn">
+                                                <i class="fa fa-info-circle"></i>
+                                            </a>
+                                            <a href="Javascript:void(0)" class="refresh-pdf icon-btn">
+                                                <i class="fa fa-refresh"></i>
+                                            </a>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            <span class="table-heading">RESTAURANT</span>
+                                            AMWAJ
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">ORDER ID</span>
+                                            OAOPZZTJM
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">DATE</span>
+                                            13-APR-2020
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">TOTAL PRICE</span>
+                                            BD270.00
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">STATUS</span>
+                                            Progress
+                                        </td>
+                                        <td class="text-center">
+                                            <a href="Javascript:void(0)" class="download-pdf icon-btn">
+                                                <i class="fa fa-file-pdf-o"></i>
+                                            </a>
+                                        </td>
+                                        <td class="text-center">
+                                            <a href="Javascript:void(0)" class="download-pdf icon-btn d-lg-none">
+                                                <i class="fa fa-file-pdf-o"></i>
+                                            </a>
+                                            <a href="Javascript:void(0)" class="info-pdf icon-btn">
+                                                <i class="fa fa-info-circle"></i>
+                                            </a>
+                                            <a href="Javascript:void(0)" class="refresh-pdf icon-btn">
+                                                <i class="fa fa-refresh"></i>
+                                            </a>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            <span class="table-heading">RESTAURANT</span>
+                                            AMWAJ
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">ORDER ID</span>
+                                            OAOPZZTJM
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">DATE</span>
+                                            13-APR-2020
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">TOTAL PRICE</span>
+                                            BD270.00
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">STATUS</span>
+                                            Progress
+                                        </td>
+                                        <td class="text-center">
+                                            <a href="Javascript:void(0)" class="download-pdf icon-btn">
+                                                <i class="fa fa-file-pdf-o"></i>
+                                            </a>
+                                        </td>
+                                        <td class="text-center">
+                                            <a href="Javascript:void(0)" class="download-pdf icon-btn d-lg-none">
+                                                <i class="fa fa-file-pdf-o"></i>
+                                            </a>
+                                            <a href="Javascript:void(0)" class="info-pdf icon-btn">
+                                                <i class="fa fa-info-circle"></i>
+                                            </a>
+                                            <a href="Javascript:void(0)" class="refresh-pdf icon-btn">
+                                                <i class="fa fa-refresh"></i>
+                                            </a>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td>
+                                            <span class="table-heading">RESTAURANT</span>
+                                            AMWAJ
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">ORDER ID</span>
+                                            OAOPZZTJM
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">DATE</span>
+                                            13-APR-2020
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">TOTAL PRICE</span>
+                                            BD270.00
+                                        </td>
+                                        <td>
+                                            <span class="table-heading">STATUS</span>
+                                            Progress
+                                        </td>
+                                        <td class="text-center">
+                                            <a href="Javascript:void(0)" class="download-pdf icon-btn">
+                                                <i class="fa fa-file-pdf-o"></i>
+                                            </a>
+                                        </td>
+                                        <td class="text-center">
+                                            <a href="Javascript:void(0)" class="download-pdf icon-btn d-lg-none">
+                                                <i class="fa fa-file-pdf-o"></i>
+                                            </a>
+                                            <a href="Javascript:void(0)" class="info-pdf icon-btn">
+                                                <i class="fa fa-info-circle"></i>
+                                            </a>
+                                            <a href="Javascript:void(0)" class="refresh-pdf icon-btn">
+                                                <i class="fa fa-refresh"></i>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
