--- a/change-password.html
+++ b/change-password.html
@@ -139,7 +139,7 @@
                                 <div class="form-group">
                                     <input type="Password" class="form-control" placeholder="Confirm New Password">
                                   </div>
-                                  <div class="actions mx-sm-0 mx-3">
+                                  <div class="actions mx-sm-0 mx-3 d-flex justify-content-sm-start justify-content-center">
                                     <button class="btn-submit">SUBMIT</button>
                                   </div>
                               </form>        
