--- a/index.html
+++ b/index.html
@@ -718,8 +718,8 @@
         </div>
         <div class="change-popup-wrapper">
             <div class="change-popup-header">
-                <div class="cross-icon">
-                    <img src="assets/images/popup-close.svg" onclick="changepopup()" alt="">
+                <div class="close-popup">
+                    <button onclick="changepopup()">Close</button>
                 </div>
                 <h2>Where and when</h2>
             </div>    
