--- a/my-addresses.html
+++ b/my-addresses.html
@@ -175,7 +175,7 @@
                             </div>
                         </div>
                         <div class="add-addresses">
-                            <a href="/"> <img src="assets/images/plus-blue.svg" class="mr-2" alt=""> add new address</a>
+                            <a href="/"> <img src="assets/images/plus-blue.svg" class="mr-2" alt=""> Add New Address</a>
                         </div>
                     </div>
                 </div>
