--- a/grab-the-offer.html
+++ b/grab-the-offer.html
@@ -135,72 +135,84 @@
                         </div>
                         <div class="details">
                             <div class="row">
-                                <div class="col-6">
-                                    <div class="box-info">
-                                    <div class="back-img">
-                                        <div class="unlimited">
-                                            <span>UNLIMITED</span>
+                                <div class="col-lg-4 col-md-6 col-12 mb-4">
+                                    <div class="product-box">
+                                        <div class="image-wrapper">
+                                            <a href="/" class="image">
+                                                <img src="assets/images/image.jpeg" alt="">
+                                            </a>
+                                            <div class="unlimited">
+                                                <span>UNLIMITED</span>
+                                            </div>
                                         </div>
-                                    </div> 
-                                    <div class="meta">
-                                        <h3>Free the Big one with your next Order</h3>
-                                        <p>Order now from YaSalam and enjoy a complimentary ‘The Big One’ burger</p>
-                                        <div class="flex-area d-flex justify-content-between">
-                                            <span class="d-inline-block">Exp: 25/08/2019 - 5/01/2020</span>
-                                            <span class="d-inline-block">DINE IN</span>
+                                        <div class="meta">
+                                            <h3>Free the Big one with your next Order</h3>
+                                            <p>Order now from YaSalam and enjoy a complimentary ‘The Big One’ burger</p>
+                                            <div class="flex-area d-flex justify-content-between">
+                                                <span class="d-inline-block">Exp: 25/08/2019 - 5/01/2020</span>
+                                                <span class="d-inline-block">DINE IN</span>
+                                            </div>
                                         </div>
-                                    </div>
                                     </div>
                                 </div>
-                                <div class="col-6">
-                                    <div class="box-info">
-                                    <div class="back-img">
-                                        <div class="unlimited">
-                                            <span>UNLIMITED</span>
+                                <div class="col-lg-4 col-md-6 col-12 mb-4">
+                                    <div class="product-box">
+                                        <div class="image-wrapper">
+                                            <a href="/" class="image">
+                                                <img src="assets/images/image.jpeg" alt="">
+                                            </a>
+                                            <div class="unlimited">
+                                                <span>UNLIMITED</span>
+                                            </div>
                                         </div>
-                                    </div> 
-                                    <div class="meta">
-                                        <h3>Free the Big one with your next Order</h3>
-                                        <p>Order now from YaSalam and enjoy a complimentary ‘The Big One’ burger</p>
-                                        <div class="flex-area d-flex justify-content-between">
-                                            <span class="d-inline-block">Exp: 25/08/2019 - 5/01/2020</span>
-                                            <span class="d-inline-block">DINE IN</span>
+                                        <div class="meta">
+                                            <h3>Free the Big one with your next Order</h3>
+                                            <p>Order now from YaSalam and enjoy a complimentary ‘The Big One’ burger</p>
+                                            <div class="flex-area d-flex justify-content-between">
+                                                <span class="d-inline-block">Exp: 25/08/2019 - 5/01/2020</span>
+                                                <span class="d-inline-block">DINE IN</span>
+                                            </div>
                                         </div>
-                                    </div>
                                     </div>
                                 </div>
-                                <div class="col-6">
-                                    <div class="box-info">
-                                    <div class="back-img">
-                                        <div class="unlimited">
-                                            <span>UNLIMITED</span>
+                                <div class="col-lg-4 col-md-6 col-12 mb-4">
+                                    <div class="product-box">
+                                        <div class="image-wrapper">
+                                            <a href="/" class="image">
+                                                <img src="assets/images/image.jpeg" alt="">
+                                            </a>
+                                            <div class="unlimited">
+                                                <span>UNLIMITED</span>
+                                            </div>
                                         </div>
-                                    </div> 
-                                    <div class="meta">
-                                        <h3>Free the Big one with your next Order</h3>
-                                        <p>Order now from YaSalam and enjoy a complimentary ‘The Big One’ burger</p>
-                                        <div class="flex-area d-flex justify-content-between">
-                                            <span class="d-inline-block">Exp: 25/08/2019 - 5/01/2020</span>
-                                            <span class="d-inline-block">DINE IN</span>
+                                        <div class="meta">
+                                            <h3>Free the Big one with your next Order</h3>
+                                            <p>Order now from YaSalam and enjoy a complimentary ‘The Big One’ burger</p>
+                                            <div class="flex-area d-flex justify-content-between">
+                                                <span class="d-inline-block">Exp: 25/08/2019 - 5/01/2020</span>
+                                                <span class="d-inline-block">DINE IN</span>
+                                            </div>
                                         </div>
-                                    </div>
                                     </div>
                                 </div>
-                                <div class="col-6">
-                                    <div class="box-info">
-                                    <div class="back-img">
-                                        <div class="unlimited">
-                                            <span>UNLIMITED</span>
+                                <div class="col-lg-4 col-md-6 col-12 mb-4">
+                                    <div class="product-box">
+                                        <div class="image-wrapper">
+                                            <a href="/" class="image">
+                                                <img src="assets/images/image.jpeg" alt="">
+                                            </a>
+                                            <div class="unlimited">
+                                                <span>UNLIMITED</span>
+                                            </div>
                                         </div>
-                                    </div> 
-                                    <div class="meta">
-                                        <h3>Free the Big one with your next Order</h3>
-                                        <p>Order now from YaSalam and enjoy a complimentary ‘The Big One’ burger</p>
-                                        <div class="flex-area d-flex justify-content-between">
-                                            <span class="d-inline-block">Exp: 25/08/2019 - 5/01/2020</span>
-                                            <span class="d-inline-block">DINE IN</span>
+                                        <div class="meta">
+                                            <h3>Free the Big one with your next Order</h3>
+                                            <p>Order now from YaSalam and enjoy a complimentary ‘The Big One’ burger</p>
+                                            <div class="flex-area d-flex justify-content-between">
+                                                <span class="d-inline-block">Exp: 25/08/2019 - 5/01/2020</span>
+                                                <span class="d-inline-block">DINE IN</span>
+                                            </div>
                                         </div>
-                                    </div>
                                     </div>
                                 </div>
                             </div>
